test/spec_vectors/local_set/fail/module_4.wat
(module (func $type-local-arg-num-vs-num (local f64 i64) (local.set 1 (f64.const 0))))